--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 *{
-
+    
+    align-items:center;
+    text-align:center;
 }
 
 .container{
     display:flex;
     flex-direction:column;
     width:50vw;
-    
+
 }
